@@ -21,6 +21,11 @@ extern void stirling(mpz_t r, unsigned long n, unsigned long m, UV type);
 extern void binomial(mpz_t r, UV n, UV k);
 extern void partitions(mpz_t npart, UV n);
 extern void factorialmod(mpz_t r, UV n, mpz_t m);
+extern void multifactorial(mpz_t r, UV n, UV k);
+extern void factorial_sum(mpz_t r, UV n);
+extern void subfactorial(mpz_t r, UV n);
+extern void rising_factorial(mpz_t r, UV x, UV n);
+extern void falling_factorial(mpz_t r, UV x, UV n);
 
 extern UV   is_power(mpz_t n, UV a);
 extern int  is_carmichael(mpz_t n);
